--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -19,10 +19,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: login to docker hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: |
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+
+    #     uses: docker/login-action@v2
+    #     with:
+    #       username: ${{ secrets.DOCKERHUB_USERNAME }}
+    #       password: ${{ secrets.DOCKERHUB_TOKEN }}
     
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
