--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: login to docker hub
         run: |
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }} || docker login -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }} || github login -u ${{ github.actor }} --with-token ${{ secrets.GITHUB_TOKEN }}
 
     #     uses: docker/login-action@v2
     #     with:
