--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -21,8 +21,8 @@ jobs:
       - name: login to docker hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
     
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
