--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -9,7 +9,6 @@ on:
       - main
   workflow_dispatch:      
 
-  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,7 +17,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: login to docker hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USER }}
@@ -29,4 +28,6 @@ jobs:
         with:
           push: true
           tags: first-portfolio:latest
+          file: ./index/Dockerfile  # Specify the path to your Dockerfile
+          context: ./index           # Set the context to the index directory
           build-args: VERSION=${{ github.event.repository.name }}-${{ github.run_number }}
