--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -7,27 +7,29 @@ on:
   pull_request:
     branches:
       - main
-  workflow_dispatch:      
+  workflow_dispatch:   
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Login to Docker Hub
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-    
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+            username: ${{ vars.DOCKER_USER }}
+            password: ${{ secrets.DOCKER_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v6
         with:
           push: true
-          tags: first-portfolio:latest
-          file: ./index/Dockerfile  # Specify the path to your Dockerfile
-          context: ./index           # Set the context to the index directory
-          build-args: VERSION=${{ github.event.repository.name }}-${{ github.run_number }}
+          tags: user/app:latest
+          file: ./index/Dockerfile
+
