--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -13,29 +13,30 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -  name: Checkout code
-         uses: actions/checkout@v4
-      -
-        name: Set up QEMU
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Login to Docker Hub
+
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-            username: ${{ vars.DOCKER_USER }}
-            password: ${{ secrets.DOCKER_TOKEN }}
-      -
-        name: list all files
-        run: ls -alF
+          username: ${{ vars.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      -
-        name: Build and push
+      - name: List all files
+        run: |
+          ls -alF
+          ls -alF index/
+
+      - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          context: .
+          file: ./index/Dockerfile
           push: true
           tags: user/app:latest
-          file: ./index/Dockerfile
-
