--- a/Index/Dockerfile
+++ b/Index/Dockerfile
@@ -12,17 +12,17 @@ RUN apt-get update && apt-get install -y \
 # Set the working directory
 WORKDIR /var/www/html
 
-# Copy only the necessary files (excluding unnecessary ones)
-COPY . . 
+# Copy the application code
+COPY . .
 
 # Set proper permissions for Apache to access the files
 RUN chown -R www-data:www-data /var/www/html
 
-# Expose the port the app runs on
-EXPOSE 80
-
 # Use a non-privileged user for better security
 USER www-data
+
+# Expose the port the app runs on
+EXPOSE 80
 
 # Start the Apache server
 CMD ["apache2-foreground"]
