--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -13,31 +13,38 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: List all files
-        run: |
-          ls -alF
-          ls -alF Index/
+      - name: Lowercase the repo name
+        run: echo "REPO_LC=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
-      - name: Build and push
+      - name: Generate semantic version
+        id: semver
+        run: |
+          sleep 10
+          RUN_NUMBER=${GITHUB_RUN_NUMBER}
+          MAJOR=$((RUN_NUMBER / 100))
+          MINOR=$(((RUN_NUMBER % 100) / 10))
+          PATCH=$((RUN_NUMBER % 10))
+          VERSION="$MAJOR.$MINOR.$PATCH"
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "Calculated version: $VERSION (from run #$RUN_NUMBER)"
+
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Index/Dockerfile
           push: true
-          tags: ${{ vars.DOCKER_USER }}/first-portfolio:latest
+          tags: |
+            ${{ env.REPO_LC }}:latest
+            ${{ env.REPO_LC }}:${{ env.VERSION }}
+            ${{ env.REPO_LC }}:${{ env.VERSION }}-${{ github.sha }}
           platforms: linux/amd64,linux/arm64
