--- a/.github/workflows/update-image.yml
+++ b/.github/workflows/update-image.yml
@@ -1,8 +1,9 @@
 name: Build and Push Docker Image
+
 on:
   push:
     branches:
-      - main
+      - main # Change to your default branch name (e.g., 'main' or 'master')
   pull_request:
     branches:
       - main
@@ -13,13 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/setup-buildx-action@v3
+
       - uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USER }}
           password: ${{ secrets.DOCKER_TOKEN }}
+
       - name: Lowercase the repo name
         run: echo "REPO_LC=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
+
       - name: Generate semantic version
         id: semver
         run: |
@@ -32,11 +37,11 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Calculated version: $VERSION (from run #$RUN_NUMBER)"
+
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
-          context: ./Index  # Changed this line to use Index directory as context
-          file: ./Index/Dockerfile  # Specify Dockerfile location
+          context: .
           push: true
           tags: |
             ${{ env.REPO_LC }}:latest
